# voc-analyst

./: .copier-answers.yml  .dockerignore  .envrc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  backyard-bot-spec.md  dot_env.example  event.json  justfile  pyproject.toml  template.yaml
bq_views/: 01_voc_daily.sql  02_voc_surge_score.sql  03_voc_keyword_trend.sql  04_voc_actions.sql  05_voc_surge_score_at.sql  README.md  apply.sh
dashboards/: README.md  cs-live.md  executive.md  product-insights.md
docs/: MIGRATION.md  PLAN_PRODUCT_INSIGHTS.md  ROADMAP.md  SLACK_GUIDE.md  SLACK_SETUP.md  VOC_ANALYST_ARCHITECTURE.md
metabase/: Dockerfile  README.md  backyard-spec.md
scripts/: build_image.sh  create_roles.sh  deploy_stack.sh  deployed_version.sh  get_stack_output.sh  invoke_job.sh  sync_env.py
src/voc_analyst/: __init__.py  app.py
src/voc_analyst/jobs/: runner.py  scheduler.py  voc_daily.py  voc_weekly.py
src/voc_analyst/slack/: __init__.py  app.py  background.py  handlers.py
src/voc_monitoring/jobs/: __init__.py  runner.py
tests/: conftest.py  test_app.py  test_background.py  test_voc_weekly.py
webapp/: .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
webapp/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
webapp/src/app/admin/: AdminLogin.tsx  AdminLogout.tsx  page.tsx
webapp/src/app/api/chat/: route.ts
webapp/src/app/api/drilldown/: route.ts
webapp/src/app/product/: error.tsx  loading.tsx  page.tsx
webapp/src/components/: CategoryChip.tsx  ChatSidebar.tsx  DateFilter.tsx  DrilldownPanel.tsx  EmotionFilter.tsx  ErrorReporter.tsx  FilterAdd.tsx  HintLayer.tsx  JiraCTA.tsx  LegendPopover.tsx  LevelPill.tsx  NegDelta.tsx  SegFilter.tsx  StatusOverview.tsx  ThemeToggle.tsx  TrackView.tsx  TrendChart.tsx  WatchGrid.tsx  WeeklySummary.tsx
webapp/src/lib/: admin.ts  agent-tools.ts  bq.ts  cache.ts  events.ts  insights.ts  jira.ts  level.ts  pii.ts  product-url.ts  queries.ts  track-client.ts
(+4 files in other folders)
