[project]
name = "voc_analyst"
version = "0.1.0"
description = "Weekly VOC analyst bot"
authors = [{ name = "June" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "litestar[standard]~=2.8",
  "uvicorn[standard]~=0.30",
  "orjson~=3.10",
  "boto3>=1.34.0",
  "anyio>=4.0.0",
  "slack-bolt>=1.18.0",
  "slack-sdk>=3.27.0",
  "httpx>=0.27.0",
  "google-cloud-bigquery>=3.35.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "voc_analyst"
module-root = "src"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "-v",
    "--tb=short"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
